Fix menu bar is invisible on long editor on Safari

--- a/src/styles/note-editor.scss
+++ b/src/styles/note-editor.scss
@@ -9,6 +9,7 @@
     overflow: auto;
     border: none;
     font-size: 1rem;
+    flex-basis: 0;
     flex-grow: 1;
     background-color: $gray-200;
 
